# subsurface-exploration

./: LICENSE  README.md  ROADMAP.md  changelog.md  pyproject.toml  requirements.txt
config/: config.yaml
docs/: assumptions.md  limitations.md  methodology.md
sample/: example1.las  example2.las
src/app/: streamlit_app.py
src/core/: __main__.py  cli.py  config.py  io.py  pipeline.py  preprocessing.py  process.py  scoring.py  seams.py  types.py
src/test/: conftest.py  test_io.py  test_normalize.py
src/viz/: __init__.py  plot_config.py  plotlib_qc.py  plotly_qc.py
