[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c-las"
version = "1.2.0"
description = "Geology-driven coal seam screening from LAS well-log data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Muhammad Raihan Raditya", email = "muhammadraihanraditya576@gmail.com" }
]

keywords = [
    "geology",
    "well-logs",
    "las",
    "coal",
    "geophysics",
    "exploration"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Geosciences",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "pandas",
    "lasio",
    "matplotlib",
    "plotly",
    "kaleido",
    "streamlit"
]

[project.urls]
Homepage = "https://github.com/Ecslipse/subsurface-exploration"
Repository = "https://github.com/Ecslipse/subsurface-exploration"
Issues = "https://github.com/Ecslipse/subsurface-exploration\docs"

[project.scripts]
clas = "core.__main__:main"